docs: 브랜치 전략 및 레파지토리 관리 수정

--- a/docs/브랜치_전략_및_레파지토리_관리.md
+++ b/docs/브랜치_전략_및_레파지토리_관리.md
@@ -34,8 +34,8 @@
 
 ### 개발
 
-1. weekly 브랜치로 이동합니다. `git switch develop`
-2. 먼저 단체 계정 레포의  `weekly` 브랜치를 동기화합니다. `git pull upstream develop`
+1. develop 브랜치로 이동합니다. `git switch develop`
+2. 먼저 단체 계정 레포의  `develop` 브랜치를 동기화합니다. `git pull upstream develop`
 3. `develop`에서 뽑아서 이슈 번호대로 feature 브랜치를 생성합니다. `git branch feat#issue-number develop`
     - 예시: `git branch feat#43 develop`
 
